fix images with inline widths on mobile

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -342,6 +342,7 @@ aside code {
 .captioned img {
   display: block;
   max-width: 100%;
+  width: auto;
   height: auto;
   margin: 0 auto;
 }
